# dotfiles

./: .bashrc  README.md  init.lua  pyproject.toml  requirements.txt
installer/: inventories.py
installer/tasks/: cargo.py  gvm.py  lazydocker.py  lazygit.py  nvim.py  nvm.py  pyenv.py
lazygit/: README.md  config.yml
lua/user/: alpha.lua  bufferline.lua  cmp.lua  colorscheme.lua  comment.lua  completion.lua  dressing.lua  indentline.lua  keymaps.lua  lualine.lua  minimap.lua  notify.lua  nvim-tree.lua  options.lua  plugins.lua  project.lua  telescope.lua  toggleterm.lua  treesitter.lua  vim-ultest.lua  which-key.lua
lua/user/dap/: adapters.lua  configurations.lua  init.lua  ui.lua
lua/user/lsp/: handlers.lua  init.lua  lsp-installer.lua  null-ls.lua
lua/user/which-key/: nmaps.lua  vmaps.lua
nvim/: README.md  init.lua  lazy-lock.json
nvim/ftplugin/: go.lua  http.lua  typescript.lua  typescriptreact.lua
nvim/lua/: vscode.lua
nvim/lua/configs/: colortable.lua  filetypes.lua  health.lua  init.lua  keymaps.lua  options.lua
nvim/lua/plugins/: auto-session.lua  bufferline.lua  ccc.lua  cmp.lua  codecompanion.lua  copilot.lua  dap-ui.lua  dap.lua  formatter.lua  gitsigns.lua  indent-blankline.lua  init.lua  lspconfig.lua  lualine.lua  luasnip.lua  mason.lua  minuet.lua  neodim.lua  neogen.lua  neotest.lua  nvim-navbuddy.lua  nvim-notify.lua  nvim-tree.lua  nvim-treesitter.lua  octo.lua  overseer.lua  render-markdown.lua  symbols-outline.lua  telescope.lua  toggleterm.lua  typescript-tools.lua
nvim/lua/user/: auto-session.lua  autopairs.lua  bufferline.lua  (+28 more)
(+81 files in other folders)
