[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My dotfiles setup"
authors = ["Felipe <26683783+feslima@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyinfra = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
